Build second recipe page and edit index and taco recipe pages
Build the Vegan Burritos page and link it to the main index page. Add
a link on the Vegan Hibiscus Tacos page to return to the index page.
Add an image to the index page and place the recipe links in unorganized
list format.

--- a/recipes/vegantacos.html
+++ b/recipes/vegantacos.html
@@ -44,5 +44,6 @@
                     pineapple, onion, and cilantro. Serve with salsa verde and lime.</li>
                 <li>Enjoy!</li>
             </ol>
+        <a href="../index.html">Return to home page</a>
     </body>
 </html>
