--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="./recipes/vegantacos.html">Vegan Hibiscus Tacos</a>
+        <h1>Vegan Mexican-American Starter Kit</h1>
+        <h2>Recipe List</h2>
+            <ul>
+                <li><a href="./recipes/vegantacos.html">Vegan Hibiscus Tacos</a></li>
+                <li><a href="./recipes/veganburritos.html">Vegan Burrito</a></li>
+            </ul>
     </body>
 </html>
