Build final recipe page and modify index page
Build the Vegan Atole recipe page with an image, link to return
to the index page and description, ingredients, and steps sections.
Link the Vegan Atole recipe to the main index page and add an image
above the recipe link list.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 
     <body>
         <h1>Vegan Mexican-American Starter Kit</h1>
+        <img src="https://ca-times.brightspotcdn.com/dims4/default/be664d2/2147483647/strip/true/crop/3000x2000+0+0/resize/840x560!/format/webp/quality/90/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2F07%2Fe5%2F815bf9b44b7e81a060c5191f8cab%2Fla-fo-mexican-vegan-los-angeles-escarcega-lede.jpg"
+        alt="Three Vegan Mexican dishes">
         <h2>Recipe List</h2>
             <ul>
                 <li><a href="./recipes/vegantacos.html">Vegan Hibiscus Tacos</a></li>
                 <li><a href="./recipes/veganburritos.html">Vegan Burrito</a></li>
+                <li><a href="./recipes/vegandrink.html">Vegan Atole</a></li>
             </ul>
     </body>
 </html>
