Add css stylesheet and edit home link on recipes
Add external css to edit text alignment, background color, and text
color of headings and description sections. Use css to set universal
site font and set equal width for all recipe food images. Modify return
to home page links to buttons.

--- a/recipes/vegandrink.html
+++ b/recipes/vegandrink.html
@@ -3,19 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Vegan Atole</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Vegan Atole</h1>
+        <h1 class="heading">Vegan Atole</h1>
         <img src="https://static01.nyt.com/images/2019/12/23/dining/kwr-atole/kwr-atole-articleLarge.jpg"
-        alt="Three mugs of Atole with sticks of cinnamon">
+        alt="Three mugs of Atole with sticks of cinnamon" class="food">
 
-        <h2>Description</h2>
-        <p>Atole is a popular Mexican hot beverage, thickened with masa and flavored with cinnamon and 
+        <h2 class="heading">Description</h2>
+        <p class="description">Atole is a popular Mexican hot beverage, thickened with masa and flavored with cinnamon and 
         brown sugar. Try this soothing beverage after dinner or in the afternoon with some cookies. You can 
         be creative and add some pureed fruit if you wish!</p>
 
-        <h2>Ingredients</h2>
+        <h2 class="heading">Ingredients</h2>
             <ul>
                 <li>½ cup masa (corn flour)</li>
                 <li>5 cups water</li>
@@ -24,7 +25,7 @@
                 <li>1 tablespoon vanilla extract</li>
             </ul>
 
-        <h2>Steps</h2>
+        <h2 class="heading">Steps</h2>
             <ol>
                 <li>
                     Place the masa, water, cinnamon and piloncillo in a blender. Blend until smooth, about 3 minutes.
@@ -40,6 +41,6 @@
                     Enjoy!!
                 </li>
             </ol>
-        <a href="../index.html">Return to main page</a>
+        <a href="../index.html"><button>Return to main page</button></a>
     </body>
 </html>
